wip #149 added drug db download and update trigger
